--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "cheetah"
 version = "0.1.0"
 edition = "2018"
 
+[lib]
+name="cheetah"
+path="src/cheetah.rs"
+
+[[bin]]
+name="sandbox"
+path="src/sandbox.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
