--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "cheetah"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2018"
 
 [lib]
 name="cheetah"
-path="src/cheetah/cheetah.rs"
+path="src/cheetah/lib.rs"
+
+[dependencies]
+ansi_term = "0.12.1"
 
 [[bin]]
 name="sandbox"
 path="src/sandbox.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
